# inundation-mapping

./: '  .dockerignore  .gitattributes  .gitignore  .nfs000000180099539c00000013  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CITATION.bib  CITATION.cff  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.jupyter  Dockerfile.old  Dockerfile.owp  Dockerfile.prod  LICENSE  Pipfile  README.md  SECURITY.md  TEMP_test_backpools.sh  TERMS.md  \  clean_up_gms_files_script.sh  dem_3dep_comparison.py  fim_pipeline.sh  fim_post_processing.sh  fim_post_processing_new.sh  fim_pre_processing.sh  fim_process_unit_wb.sh  fim_run.sh  gms_pipeline.sh  gms_run.sh  gms_run_branch.sh  gms_run_post_processing.sh  gms_run_unit.sh  install_grass.exp  owp.Dockerfile  param.sh  (+5 more)
.devcontainer/: devcontainer.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
config/: .nfs0000001912e0566000000017  .params_calibrated.env.swp  .params_template.env.swp  aws_s3_put_fim3_hydrovis_whitelist.lst  aws_s3_put_fim3_whitelist.lst  aws_s3_put_fim4_hydrovis_whitelist.lst  aws_s3_put_whitelist.lst  calb_db_keys_template.env  catfim_template.env  create_mannings_table.py  deny_branch_unittests.lst  deny_branch_zero.lst  deny_branches.lst  deny_gms_branch_unittests.lst  deny_gms_branch_zero.lst  deny_gms_branches.lst  deny_gms_branches_default.lst  deny_gms_branches_dev.lst  deny_gms_branches_min.lst  deny_gms_branches_prod.lst  deny_gms_unit.lst  deny_gms_unit_default.lst  deny_gms_unit_prod.lst  deny_unit.lst  mannings_default.json  mannings_default_calibrated.json  mannings_table.json  mannings_template.json  param_adj.csv  param_adj.txt  params_calibrated.env  params_template.env  params_template_calibrated.env  test1.env  test2.env  test3.env  test4.env
data/: README.md  create_calibration_points_geoparquet.py  create_parquet_files_by_HUC_id_from_calibration_points.py  create_vrt_file.py  esri.py  get_sample_data.py  gpkg_to_parquet.py  make_upstream_watersheds.py  preprocess_rasters.py  update_benchmark_flows.py  write_parquet_from_calib_pts.py
docs/: CHANGELOG.md  SECURITY.md  correlation-analysis.py
lib/: .nfs0000001a215d980200000014  .nfs0000001a215d980400000018  .nfs0000001a215d980f0000001b  .nfs0000001a215d981300000015  .nfs0000001a215d981500000019  .nfs0000001a215d981800000016  .nfs0000001b5448235f00000038  Hydraulic_Property_V2.2.py  acquire_and_preprocess_inputs.py  add_crosswalk.py  adjust_headwater_streams.py  adjust_thalweg_lateral.py  aggregate_fim_outputs.py  aggregate_fim_outputs.sh  aggregate_nhd_hr_streams.py  aggregate_vector_inputs.py  agreedem.py  bash_functions.env  bathy_rc_adjust.py  build_stream_traversal.py  buildstreamtraversal.py  clip_vectors_to_wbd.py  cross_walk.py  d8_rem.py  derive_headwaters.py  entrypoint.sh  filter_catchments_and_add_attributes.py  fr_to_ms_conversion.py  fr_to_ms_raster_mask.py  getRasterInfoNative.py  get_all_huc_in_inputs.py  handBYhuc.sh  hydraulic_property_postprocess.py  hydrocond.py  inundateREM.py  inundation.py  make_stages_and_catchlist.py  mannings_calibration.sh  output_cleanup.py  preprocess_gis.sh  (+23 more)
lib/find_inlets/: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  cmake_install.cmake  compile-on-roger.sh
lib/find_inlets/src/: find_inlets.cpp  find_inlets_hr.cpp
qa/: hydrotable_test.py
src/: accumulate_headwaters.py  acquire_and_preprocess_inputs.py  add_and_verify_crosswalk.py  add_crosswalk.py  adjust_floodplains.py  adjust_headwater_streams.py  adjust_thalweg_lateral.py  aggregate_branch_lists.py  aggregate_by_huc.py  aggregate_fim_outputs.py  aggregate_vector_inputs.py  agreedem.py  associate_levelpaths_with_levees.py  bash_functions.env  bash_variables.env  bathy_rc_adjust.py  bathy_src_adjust_topwidth.py  bathymetric_adjustment.py  buffer_stream_branches.py  build_stream_traversal.py  burn_in_levees.py  burn_streams_by_order.py  check_dem_nodata.py  check_huc_inputs.py  check_unit_errors.py  clip_rasters_to_branches.py  clip_vectors_to_wbd.py  compute_slopes.py  concat_duration.py  conflate_catchments.py  conflate_networks.py  crosswalk_network_id.py  crosswalk_nwm_demDerived.py  delineate_hydros_and_produce_HAND.sh  derive_headwaters.py  derive_level_paths.py  dissolve_pixel_catchments.py  duration_system.py  edit_points.py  entrypoint.sh  (+58 more)
tests/: aggregate_mannings_calibration.py  aggregate_metrics.py  all_ble_stats_comparison.py  backfill_stats.py  ble_autoeval.sh  cache_metrics.py  calc_obj_func.py  clean_up_bfe_forecasts.py  comparing_src.py  inundate_gms.py  inundation.py  inundation.sh  mannings_calibration.sh  mannings_calibration_run.sh  mannings_crosswalk_adj.sh  mannings_run_by_set.sh  objective_function_comparison.py  overlapping_inundation.py  run_test_case.py  run_test_case_calibration.py  run_test_case_nwm_recurr.py  run_test_case_recurr.py  run_test_case_user_defined_flow.py  synthesize_test_cases.py  time_and_tee_mannings_calibration.sh  time_stuff.sh
tools/: .env.template  TEMP_catfim_produce_inud_map_for_stage.py  TEMP_wrapper_catfim_postprocessing.py  adjust_rc_with_feedback.py  adjust_wse_with_ras2fim.py  aggregate_csv_files.py  aggregate_mannings_calibration.py  aggregate_metrics.py  analyze_flood_impact.py  analyze_for_missing_FIM_cells.py  bathy_src_adjust.py  bathy_src_adjust_topwidth.py  bathy_src_adjust_topwidth_qreg.py  bridge_inundation.py  burn_ble_extents.py  cache_metrics.py  catfim_sites_compare.py  check_deep_flooding.py  check_for_negative_rems.py  collate_catchment_attributes.py  combine_crosswalk_tables.py  compare_dems.py  compare_gms_srcs_to_fr.py  compare_ms_and_non_ms_metrics.py  compare_water_surface_elev.py  comparing_src.py  compile_comp_stats.py  compile_computational_stats.py  composite_inundation.py  composite_ms_fr_inundation.py  compute_metrics_by_catchment.py  concat_huc_to_conus.py  consolidate_metrics.py  convert_to_int16.py  copy_huc_dirs.py  copy_test_case_folders.py  correlation_analysis.py  create_ble_benchmark.py  create_flow_forecast_file.py  cygnss_preprocessing.py  (+84 more)
trash/: GMS_Full_Branch_Processing_Vis.ipynb
unit_tests/: README.md  (+54 more)
(+340 files in other folders)
