[project]
name = 'Inundation Mapping'

description = """\
    Flood inundation mapping software configured to work with the U.S. National Water Model, \
    operated and maintained by the National Oceanic and Atmospheric Administration (NOAA) \
    National Water Center (NWC). \
    This software uses the Height Above Nearest Drainage (HAND) method to generate \
    Relative Elevation Models (REMs), Synthetic Rating Curves (SRCs), and catchment grids. \
    This repository also includes functionality to generate flood inundation maps (FIMs) \
    and evaluate FIM accuracy. \
    """

maintainers = [
    {name = "Fernando Salas", email = "fernando.salas@noaa.gov"},
    {name = "Carson Pruitt", email = "carson.pruitt@noaa.gov"},
    {name = "Ali Forghani", email = "ali.forghani@noaa.gov"},
    {name = "Emily Deardorff", email = "emily.deardorff@noaa.gov"},
    {name = "Greg Petrochenkov", email = "greg.petrochenkov@noaa.gov"},
    {name = "Hamideh Safa", email = "hamideh.safa@noaa.gov"},
    {name = "Zahra Ghahremani", email = "zahra.ghahremani@noaa.gov"},
    {name = "Matt Luck", email = "matt.luck@noaa.gov"},
    {name = "Riley McDermott", email = "riley.mcdermott@noaa.gov"},
    {name = "Robert Hanna", email = "robert.hanna@noaa.gov"},
    {name = "Ryan Spies", email = "ryan.spies@noaa.gov"}
]

requires-python = ">=3.8"
keywords = ["flood inundation", "mapping"]
license = {path = "./LICENSE"}
version = "4.4.0"

[project.urls]
Source = "https://github.com/NOAA-OWP/inundation-mapping"
Wiki = "https://github.com/NOAA-OWP/inundation-mapping/wiki"


# - Tools -

# exclude = '''
# /(
#   \.csv$ | \.csv$ | \.csv$
# )/
# '''

# exclude: |
#            (?x)^(
#                \.csv$ |
#                \.txt$ |
#                \.yml$ |
#            )$

[tool.black]
skip-string-normalization = true
skip-magic-trailing-comma = true
line-length = 110
exclude = '''
/(
   \.csv$ | \.txt$ | \.yml$
 )/
 '''

[tool.isort]
profile = 'black'
line_length = 110
multi_line_output = 3
lines_after_imports = 2
# extend-skip = [".csv"]
skip_glob = ["*.csv", "*.yml", "*.txt"]

# yes, the exclue format is different from black
[tool.flake8]
count = true
doctests = true
max-complexity = 56
max-line-length = 110
extend-ignore = """
    E203,
    E266,
    E501,
    E712,
    W503,
    W391,
    F401,
    F403,
    """
exclude = ["*.csv", "*.yml", "*.txt"]

per-file-ignores = """
    src/src_roughness_optimization.py: F841
    src/build_stream_traversal.py: E722
    tools/eval_alt_catfim.py: F841
    tools/inundation.py: F821
    tools/rating_curve_comparison.py: F821, F841
    tools/run_test_case.py: E711
    tools/tools_shared_functions.py: F821, F841, E711
    data/usgs/rating_curve_get_usgs_curves.py: F841
    """